# distortion-model-precision

./: CMakeLists.txt  README.md
scripts/: extract_distort_from_xml.sh  generate-data.sh  model.gnuplot  radial_division.gnuplot
src/: main.cpp  model.cpp  model.h  modelDivision.cpp  modelDivision.h  modelFOV.cpp  modelFOV.h  modelLensfun.cpp  modelLensfun.h  modelPoly.cpp  modelPoly.h  modelRadial.cpp  modelRadial.h  modelRational.cpp  modelRational.h
src/libNumerics/: CMakeLists.txt  computeH.cpp  matrix.cpp  matrix.h  numerics.cpp  numerics.h
